--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mongodb": "^3.3.2",
     "nuxt": "^2.14.7",
     "scrolling-element": "^1.0.2",
+    "slugify": "^1.4.6",
     "tinycolor2": "^1.4.2",
     "vue-clamp": "^0.3.1",
     "vue-moment": "^4.0.0",
